package CasseTete;

import javafx.scene.text.Text;

public class CellEmpty extends Cell {


    public CellEmpty(int x, int y, boolean occupied, String symbol) {
        super(x, y, occupied, symbol);
    }
}
