package CasseTete;

import javafx.scene.text.Text;

public class CellPath extends Cell {


    public CellPath(int x, int y, boolean occupied, String symbol) {
        super(x, y, occupied, symbol);
    }
}
