package CasseTete;


import javafx.application.Application;

public class Main {

    public static void main(String[] args) {
        Application.launch(View.class,args);
    }
}
