@startuml

title __JAVA_PROJECT's Class Diagram__\n

  namespace CasseTete {
    abstract class CasseTete.Cell.Cell {
    }
  }
  

  namespace CasseTete {
    class CasseTete.Cell.Cell.CellEmpty {
    }
  }
  

  namespace CasseTete {
    class CasseTete.Cell.CellPath {
    }
  }
  

  namespace CasseTete {
    class CasseTete.Cell.CellSymbol {
    }
  }
  

  namespace CasseTete {
    class CasseTete.Controller {
    }
  }
  

  namespace CasseTete {
    class CasseTete.Main {
    }
  }
  

  namespace CasseTete {
    class CasseTete.Model {
    }
  }
  

  namespace CasseTete {
    class CasseTete.View {
    }
  }
  

  CasseTete.Cell.Cell.CellEmpty -up-|> CasseTete.Cell.Cell
  CasseTete.Cell.CellPath -up-|> CasseTete.Cell.Cell
  CasseTete.Cell.CellSymbol -up-|> CasseTete.Cell.Cell
  CasseTete.Model -up-|> java.util.Observable
  CasseTete.View -up-|> javafx.application.Application
  CasseTete.View o-- CasseTete.Controller : controller
  CasseTete.View o-- CasseTete.Model : model
  CasseTete.View o-- CasseTete.View : view


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
